# allegro_project

./: #allegro_project.cpp#  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.44cb304  README.md  allegro_project.cbp  allegro_project.cpp  allegro_project.depend  allegro_project.h  allegro_project.layout  build.ninja  cmake_install.cmake  compile_commands.json  makefile  test.cpp  vv_utils.h
.cache/clangd/index/: allegro_project.cpp.242608978BC2E3E6.idx  allegro_project.h.83C07CE5F6F6E369.idx  test.cpp.D7AD8570689783C5.idx  vv_utils.h.1DC86B800D5F63C4.idx
